# cs506-final-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: ICE_data.pkl
data/raw/: ICE_data.csv  Over_Time_Years_Removals.csv  mini_ICE_data.csv
notebooks/: forecast_analysis.ipynb  visualization.ipynb
src/: data_exploration.py
src/cs506_final_project/: final.py  ice_modeling.py  main.py  process.py  train_model.py  visualization.py
tests/: test_process.py
